polished up type, spacing issues on homepage

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -4,5 +4,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  background-color: $fdl-blue;
+  color: $dark-text;
 }
