--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -12,13 +12,16 @@
   width: 100%;
   height: 70px;
   background-color: white;
-  border-bottom: 1px solid $border-gray;
+  border-bottom: 1px solid $bg-gray;
   white-space: nowrap;
-}
-
-.fdl-nav a {
-  text-decoration: none;
-  color: black;
+  a {
+    text-decoration: none;
+    color: black;
+    &:hover {
+      border-bottom: 5px solid $fdl-blue;
+      margin-bottom: -1px;
+    }
+  }
 }
 
 .fdl-nav-left, .fdl-nav-right {
@@ -38,7 +41,7 @@
 }
 
 .fdl-nav-logo img {
-  height: 45px;
+  height: 35px;
 }
 
 .fdl-nav-courses {
